[tool.poetry]
name = "nekidaem"
version = "0.1.0"
description = ""
authors = ["Abdunazarov <abdunazarovdior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"
celery = "^5.3.6"
pytest = "^8.0.0"
httpz = "^1.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
